src/objects/Item_Restriction__c.object
<CustomObject>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Restrictions</relationshipLabel>
        <relationshipName>Item_Restrictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Restriction_Text__c</fullName>
        <label>Restriction Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction_Type_ID__c</fullName>
        <label>Restriction Type ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Item Restriction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Restriction_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Item Restriction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Restrictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>